<resources>
    <string name="app_name">Digi Wallet</string>

    <!--Login screen string values-->
    <string name="login_phone_number">Phone Number</string>
    <string name="login_password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="openwallet_button_text">Open Wallet</string>
    <string name="createwallet_buton_text">Create Wallet</string>
    <string name="copyright_text">Copyright \u00A9 2019, Atmecs Technologies</string>

    <string name="login_phonenumber_error">Enter a valid 10 digit Phone number</string>
    <string name="login_password_error">Invalid Password</string>



    <!--Create wallet screen string values-->
    <string name="create_wallet_title">Create Wallet</string>
    <string name="create_wallet_text">Create a wallet to continue</string>
    <string name="create_wallet_firstname">First Name</string>
    <string name="create_wallet_lastname">Last Name</string>
    <string name="create_wallet_email">Email</string>
    <string name="create_wallet_confirm_password">Confirm Password</string>
    <string name="createwallet_checkbox_text">By checking, I agree to the Terms and Conditions and Privacy Policy of the Digi Wallet</string>
    <string name="create_button_text">Create</string>

    <string name="firstname_error">Enter your valid first name</string>
    <string name="lastname_error">Enter your valid Last name</string>
    <string name="email_error">Enter a valid Email Id</string>
    <string name="phonenumber_error">Enter a valid 10 digit Phone number</string>
    <string name="password_error">Enter a valid Password</string>
    <string name="confirmpassword_error">Please confirm your valid password</string>
    <string name="confirmpassword_mismatch">Password mismatch</string>
    <string name="password_suggestion">Note: Password should be greater than 6 characters, must contain at least one uppercase character, a special character and one numeric character.</string>


    <!--Forgot password screen string values-->
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password_text">Enter the email address associated with your account.</string>
    <string name="forgot_password_label">We will email you a link to reset your password.</string>
    <string name="forgot_password_edit_text">Email Address</string>
    <string name="forgot_password__send_button">Send</string>

    <string name="forgot_password__email_error">Enter your registered valid email id</string>

    <!--Navigation drawer screen string values-->

    <string name="navigation_cards">My Cards</string>
    <string name="navigation_photos">My Photos</string>
    <string name="navigation_keys">My Keys</string>
    <string name="navigation_about_us">About Us</string>
    <string name="navigation_help">Help</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_logout">Logout</string>
    <string name="navigation_version">Version</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Tool bar string values-->
    <string name="home_activity_title">My Money</string>

    <!--home fragment string values-->
    <string name="home_wallet_balance_text">Wallet Balance</string>
    <string name="home_wallet_amount_text">\u20B9 35.63</string>
    <string name="button_add_money">Add Money</string>
    <string name="label_send_money">Send Money</string>

</resources>
