<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/create_wallet_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/whiteColor">

    </androidx.appcompat.widget.Toolbar>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/create_wallet_toolbar"
        android:background="@color/whiteColor"
        android:fillViewport="true"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/createwallet_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:text="@string/create_wallet_text"
                android:textColor="@color/blackColor"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/text_first_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/createwallet_text"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/text_view_border"
                android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:hint="@string/create_wallet_firstname"
                android:padding="10dp" />

            <EditText
                android:id="@+id/text_last_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/text_first_name"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/text_view_border"
                android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:hint="@string/create_wallet_lastname"
                android:padding="10dp" />

            <EditText
                android:id="@+id/text_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/text_last_name"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/text_view_border"
                android:hint="@string/create_wallet_email"
                android:padding="10dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/text_phone_number"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/text_email"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/text_view_border"
                android:hint="@string/login_phone_number"
                android:inputType="phone"
                android:maxLength="10"
                android:padding="10dp" />

            <EditText
                android:id="@+id/createwallet_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/text_phone_number"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/text_view_border"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:padding="10dp" />

            <TextView
                android:id="@+id/password_suggestions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/createwallet_password"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:text="@string/password_suggestion"
                android:textColor="@color/copyright_textcolour"
                android:textSize="10dp" />

            <EditText
                android:id="@+id/createwallet_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/password_suggestions"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/text_view_border"
                android:hint="@string/create_wallet_confirm_password"
                android:inputType="textPassword"
                android:padding="10dp" />

            <CheckBox
                android:id="@+id/button_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/createwallet_confirm_password"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="40dp"
                android:buttonTint="@color/createWalletButtonColour"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/text_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/createwallet_confirm_password"
                android:layout_marginLeft="65dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="40dp"
                android:text="@string/createwallet_checkbox_text"
                android:textColor="@color/blackColor"
                android:textSize="12dp" />

            <Button
                android:id="@+id/button_create_wallet"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_below="@+id/text_checkbox"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/create_wallet_buttons_style"
                android:text="@string/createwallet_buton_text"
                android:textAllCaps="false"
                android:textColor="@color/text_colour"
                android:textSize="21dp" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>