<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/whiteColor"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/whiteColor"
        tools:context=".Activities.MainActivity">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="146dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/digiwalletlogo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/app_logo_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app_logo"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/righteous_regular"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/copyright_textcolour"
            android:textSize="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_logo" />

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="220dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/text_view_border"
            android:hint="@string/login_phone_number"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="10dp"
            android:drawableStart="@drawable/icons_phone"
            android:drawablePadding="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="280dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/text_view_border"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/login_password"
            android:padding="10dp"
            android:drawableStart="@drawable/icons_key"
            android:drawablePadding="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_number"/>

        <Button
            android:id="@+id/btn_open_wallet"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/login_buttons_style"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/openwallet_button_text"
            android:textAllCaps="false"
            android:textColor="@color/text_colour"
            android:textSize="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <TextView
            android:id="@+id/link_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_open_wallet"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="Forgot Password? "
            android:textAlignment="center"
            android:textColor="#0C0C0C"
            android:textSize="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_open_wallet" />

        <Button
            android:id="@+id/btn_create_wallet"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/create_wallet_buttons_style"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/createwallet_buton_text"
            android:textAllCaps="false"
            android:textColor="@color/text_colour"
            android:textSize="21dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/link_forgot_password" />

        <TextView
            android:id="@+id/text_copy_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            android:text="@string/copyright_text"
            android:textAlignment="center"
            android:textColor="@color/copyright_textcolour"
            android:textSize="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>