<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <androidx.appcompat.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/forgot_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/whiteColor">

    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/whiteColor"
        android:layout_below="@+id/forgot_toolbar"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/src_forgotpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="100dp"
                android:src="@drawable/forgot_password_avatar" />

            <TextView
                android:id="@+id/forgotpassword_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/src_forgotpassword"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:gravity="center"
                android:text="@string/forgot_password_text"
                android:textColor="@color/blackColor"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/forgotpassword_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forgotpassword_text"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:gravity="center"
                android:text="@string/forgot_password_label"
                android:textColor="@color/copyright_textcolour"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/text_forgotpassword_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/forgotpassword_label"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/text_view_border"
                android:drawableStart="@drawable/icon_mail"
                android:drawablePadding="10dp"
                android:hint="@string/forgot_password_edit_text"
                android:padding="10dp"
                android:singleLine="true" />


            <Button
                android:id="@+id/button_send_password"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_below="@+id/text_forgotpassword_email"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/create_wallet_buttons_style"
                android:text="@string/forgot_password__send_button"
                android:textAllCaps="false"
                android:textColor="@color/text_colour"
                android:textSize="21dp" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>