<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/homeBackGroundColour"
    android:orientation="vertical">

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/home_fragment_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true">


            <ImageView
                android:id="@+id/src_indian_rupee"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="100dp"
                android:src="@drawable/icon_rupee" />

            <TextView
                android:id="@+id/text_wallet_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/src_indian_rupee"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:gravity="center"
                android:text="@string/home_wallet_balance_text"
                android:textColor="@color/whiteColor"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/wallet_balance_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/src_forgotpassword"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="40dp"
                android:gravity="center"
                android:text="@string/home_wallet_amount_text"
                android:textColor="@color/whiteColor"
                android:textSize="22dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_add_money"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:layout_below="@+id/wallet_balance_value"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/add_money_button_style"
                android:text="@string/button_add_money"
                android:textAllCaps="false"
                android:textColor="@color/text_colour"
                android:textSize="15dp" />


            <RelativeLayout
                android:id="@+id/user_list_layout"
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"

                android:background="@drawable/home_fragment_list_style">


                <TextView
                    android:id="@+id/label_send_money"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/src_forgotpassword"
                    android:layout_gravity="center"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="40dp"
                    android:gravity="center"
                    android:text="@string/label_send_money"
                    android:textColor="@color/blackColor"
                    android:textSize="18dp" />

                <EditText
                    android:id="@+id/user_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="5dp"
                    android:layout_below="@+id/label_send_money"
                    android:background="@drawable/list_text_view_style"
                    android:drawableStart="@drawable/ic_phone_18"
                    android:drawableEnd="@drawable/icon_contacts"
                    android:drawablePadding="10dp"
                    android:hint="Phone Number"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textSize="16dp"/>

                <EditText
                    android:id="@+id/user_amount"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/user_phone_number"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/list_text_view_style"
                    android:drawableStart="@drawable/ic_rupee_icon_16"
                    android:drawablePadding="10dp"
                    android:hint="Enter the amount "
                    android:inputType="numberDecimal"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textSize="16dp"/>

                <EditText
                    android:id="@+id/user_remarks"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/user_amount"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/list_text_view_style"
                    android:drawableStart="@drawable/ic_remarks_16"
                    android:drawablePadding="10dp"
                    android:hint="Remarks"
                    android:maxLength="30"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textSize="16dp"/>

            </RelativeLayout>

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton

            android:id="@+id/floating_button_send_money"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_below="@+id/user_remarks"
            android:layout_gravity="center"
            android:layout_marginTop="367dp"
            android:backgroundTint="@color/createWalletButtonColour"
            android:padding="5dp"
            android:text="Send"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/text_colour"
            android:textSize="15dp"
            android:theme="@style/AppThemeFloatingButton"
            app:icon="@drawable/icon_send"
            app:iconPadding="6dp"
            app:iconTint="@color/whiteColor" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</ScrollView>




